Removes superfluous scrollbars in fullcalendar instances. Fixes #110

--- a/plonetheme/onegov/resources/sass/components/tables.scss
+++ b/plonetheme/onegov/resources/sass/components/tables.scss
@@ -5,6 +5,10 @@ caption {
 #column-content table {
   margin-bottom: 1em;
 }
+// excempt the fullcalendar table from this
+#column-content .fc-content table {
+    margin-bottom: 0;
+}
 table.listing,
 table.plain {
   max-width: 100%;
